個人開発演習_登録_バリデーション_メッセージ出力完了（現在formの横に出力中）

--- a/spring_crud_exc5_name/src/main/resources/messages.properties
+++ b/spring_crud_exc5_name/src/main/resources/messages.properties
@@ -6,3 +6,7 @@ birthday=生年月日
 
 typeMismatch.java.lang.Integer={0}は整数値で入力してください。
 typeMismatch.java.util.Date=正しい日付を入力してください。
+
+# ↓下２つはこれでいいのか分からずとりあえず書いてある
+#=社員ID、またはパスワードが間違っています。
+#=該当する社員は存在しません。
